--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,13 @@ header {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    background-image: url("../images/hero-bg.jpg");
+    background-size: cover;
+    background-position: 80%;
+    background-attachment: fixed;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
 }
 
 header h1 {
@@ -80,7 +87,8 @@ section {
 .hero {
     background-image: url("../images/hero-bg.jpg");
     background-size: cover;
-    background-position: center;
+    background-position: 80%;
+    background-attachment: fixed;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -346,6 +354,7 @@ section {
     header {
         padding-bottom: 0;
         justify-content: center;
+        position: relative;
 }
 
     header h1 {
