--- a/assets/css/secondary-styles.css
+++ b/assets/css/secondary-styles.css
@@ -1,9 +1,9 @@
-.hero {
+/* .hero {
     background-position: bottom;
     height: auto;
     text-align: center;
     margin-bottom: 40px;
-}
+} */
 
 .page-title {
     color: #fce138;
